Fixed issue with old output not being cleared, i.e. inproper use of OOP

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,7 +16,7 @@
         <div class="card upload dz-message">
             <div class="card-body">
                 <i class="h1 mb-4 fas fa-upload text-secondary"></i>
-                <h6 class="text-secondary">Drop files here or <a href="#" class="upload-link">click to upload</a></h6>
+                <h6 class="text-secondary">Drop files here or <a href="javascript:void(0);" class="upload-link">click to upload</a></h6>
             </div>
         </div>
         <div class="card upload file-contents">
